tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7965/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_A: [[bool; 0]; 2] = [[], []];

fn main(a: bool, b: [(bool, bool, bool, str<2>); 4]) -> pub [bool; 0] {
    if a {
        G_A[(((b[0_u32].0 as u8) + (b[0_u32].0 as u8)) as u32) % 2_u32]
    } else {
        G_A[(((b[0_u32].0 as u8) + (b[0_u32].0 as u8)) as u32) % 2_u32]
    }
}
