tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7965/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "tuple",
            "fields": [
              {
                "kind": "integer",
                "sign": "unsigned",
                "width": 1
              },
              {
                "kind": "boolean"
              },
              {
                "kind": "integer",
                "sign": "unsigned",
                "width": 1
              },
              {
                "kind": "string",
                "length": 2
              }
            ]
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 0,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _28",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 1)] []",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 8)] []",
    "BLACKBOX::RANGE [(_5, 8)] []",
    "BLACKBOX::RANGE [(_6, 1)] []",
    "BLACKBOX::RANGE [(_7, 1)] []",
    "BLACKBOX::RANGE [(_8, 1)] []",
    "BLACKBOX::RANGE [(_9, 8)] []",
    "BLACKBOX::RANGE [(_10, 8)] []",
    "BLACKBOX::RANGE [(_11, 1)] []",
    "BLACKBOX::RANGE [(_12, 1)] []",
    "BLACKBOX::RANGE [(_13, 1)] []",
    "BLACKBOX::RANGE [(_14, 8)] []",
    "BLACKBOX::RANGE [(_15, 8)] []",
    "BLACKBOX::RANGE [(_16, 1)] []",
    "BLACKBOX::RANGE [(_17, 1)] []",
    "BLACKBOX::RANGE [(_18, 1)] []",
    "BLACKBOX::RANGE [(_19, 8)] []",
    "BLACKBOX::RANGE [(_20, 8)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _1) 0 ], EXPR [ 2 ]], outputs: [_21, _22]",
    "BLACKBOX::RANGE [(_21, 31)] []",
    "BLACKBOX::RANGE [(_22, 1)] []",
    "EXPR [ (2, _1) (-2, _21) (-1, _22) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _22) 4294967294 ], EXPR [ 4294967296 ]], outputs: [_23, _24]",
    "BLACKBOX::RANGE [(_23, 1)] []",
    "BLACKBOX::RANGE [(_24, 32)] []",
    "EXPR [ (1, _22) (-4294967296, _23) (-1, _24) 4294967294 ]",
    "EXPR [ (-1, _0, _23) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (2, _1) 0 ], EXPR [ 2 ]], outputs: [_25, _26]",
    "BLACKBOX::RANGE [(_25, 31)] []",
    "BLACKBOX::RANGE [(_26, 1)] []",
    "EXPR [ (2, _1) (-2, _25) (-1, _26) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _26) 4294967294 ], EXPR [ 4294967296 ]], outputs: [_27, _28]",
    "BLACKBOX::RANGE [(_27, 1)] []",
    "BLACKBOX::RANGE [(_28, 32)] []",
    "EXPR [ (1, _26) (-4294967296, _27) (-1, _28) 4294967294 ]",
    "EXPR [ (1, _0, _27) (-1, _27) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "nZNNjoQgEEbvUmsXUoh/V5lMDCp2SAgaWieZGO8+pYDTvegNqyd8PkIBtcOo+u3RaTvNT2i/duidNkY/OjMPctWzpdn9yCAOu9UpRVPwkpO1SKfsCq3djMngR5rt+um5SHtxlY7SPANlRyItOGmjzq8j+7fzzyrjVZBZwW5dJPlNkl9Gv6ySfBH9SiT5RfTrPMXH5vYxwUfGgo9Fmh8vH0XK/jFvbl8k+cXtv9/fN43koN3biwdklGaA6ME9Cg8BLb0GLD0qj9qjucBzaGnDnHmgB/egVc7T4CKwDKwC65PHWYvTsjcqtOC02eGlI9ffJSaxZxc3D2rcnDpruTKq7g8=",
  "file_map": {
    "50": {
      "source": "global G_A: [[bool; 0]; 2] = [[], []];\n\nfn main(a: bool, b: [(u1, bool, u1, str<2>); 4]) -> pub [bool; 0] {\n    if (a) {\n        G_A[((((b[0].0 as u8) + (b[0].0 as u8)) as u32) % 2)]\n    } else {\n        G_A[((((b[0].0 as u8) + (b[0].0 as u8)) as u32) % 2)]\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
