tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7965/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v3: u1, v4: [(u1, u1, u1, [u8; 2]); 4]):
    (no terminator instruction)
}
[array_oob_regression_7965] Circuit output: []
